fix weird spacing on blog

--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -28,7 +28,6 @@
   }
 
   .prose > * {
-    grid-column: 1 / span 1;
     inline-size: 100%;
   }
 }
